# TASauria

./: .gitignore  .gitmodules  LICENSE  README.ja.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/scripts/: create_dist_summary.py  fetch_bizhawk_version.py  generate_bizhawk_version_constants.py  get_bizhawk_version.py
.github/templates/: dist_summary.jinja2
.github/workflows/: build.yml  build_binaries.yml  build_documentation.yml  build_plugin.yml  build_python.yml
TASauriaPlugin/: Configuration.cs  EmulatorInterface.cs  ExternalToolForm.Designer.cs  ExternalToolForm.cs  ExternalToolForm.resx  GlobalState.cs  LocalizationFile.cs  Logging.cs  Server.cs  TASauriaForm.Designer.cs  TASauriaForm.cs  TASauriaPlugin.csproj  TASauriaPlugin.sln
TASauriaPlugin/Commands/: Command.cs  EmulatorCommand.cs  IPathTestable.cs  Registry.cs
TASauriaPlugin/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
documentation/: .gitignore  package-lock.json  package.json
documentation/scripts/: generate_api_reference.py
documentation/source/: getting-started.md  index.md
documentation/templates/: api_reference.en.md  api_reference.ja.md
examples/cookbook/: n64_spin_control_stick.py
tasauria/: .gitignore  __init__.py  __main__.py  client.py  exceptions.py  types.py
tasauria/adapters/: __init__.py  async_.py
tasauria/commands/: __init__.py  client.py  joypad.py  memory.py  meta.py  movie.py  savestate.py
tasauria/systems/: __init__.py  amiga.py  atari_2600.py  atari_7800.py  atari_lynx.py  c64.py  colecovision.py  gb.py  gba.py  genesis.py  intellivision.py  master_system.py  n3ds.py  n64.py  nds.py  nes.py  ngp.py  odyssey2.py  pcfx.py  psx.py  saturn.py  snes.py  turbografx.py  vectrex.py  virtual_boy.py  zx_spectrum.py
tests/manual/: documentation_basic_example.py  documentation_example_asyncctx.py  frame_advance_speed.py
(+85 files in other folders)
