[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tasauria"
description = "A library for remotely controlling BizHawk with custom scripts"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "scarletcafe" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Emulators",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Issue tracker" = "https://github.com/scarletcafe/tasauria/issues"

[tool.setuptools]
packages = [
    "tasauria",
]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "tasauria",
]
exclude = [
    "**/__pycache__",
    "BizHawk",
    "TASauriaPlugin",
    "documentation",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.9"
typeCheckingMode = "strict"
